# model-signing-spec

./: CHANGELOG.md  README.md  SECURITY.md  SPEC.md  VERSIONING.md  algorithm-registry.md  pyproject.toml
.github/workflows/: validate-schemas.yml
schemas/: __init__.py  __main__.py  bundle.schema.json  envelope.schema.json  predicate.schema.json  statement.schema.json
schemas/v1.0/: bundle.schema.json  predicate.schema.json  statement.schema.json
spec/: v1.0.md
test-vectors/: validate.py  validate.sh
test-vectors/invalid/: missing-envelope.bundle.json  missing-tlog-entries.bundle.json
test-vectors/invalid-payload/: wrong-predicate.bundle.json
test-vectors/v1.0/invalid/: missing-envelope.bundle.json  missing-verification-material.bundle.json
test-vectors/v1.0/invalid-payload/: wrong-predicate.bundle.json
test-vectors/v1.0/valid/: certificate.bundle.json  key.bundle.json  sigstore.bundle.json
test-vectors/valid/: certificate.bundle.json  key.bundle.json  sigstore.bundle.json
