[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oms-schemas"
version = "1.0.0"
description = "OMS JSON Schemas and validation for OpenSSF Model Signing bundles"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "jsonschema>=4.20",
    "referencing>=0.31",
]

[tool.setuptools]
packages = ["oms_schemas"]
package-dir = {"oms_schemas" = "schemas"}

[tool.setuptools.package-data]
oms_schemas = ["*.json"]
